<resources>
    <string name="app_name">InventoryApp</string>
    <string name="category_product_information">Product Information</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_price">Price/unit</string>
    <string name="hint_quantity">Quantity</string>
    <string name="category_supplier_info">Supplier Info</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone #</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_item">Add a item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="editor_insert_item_failed">Error saving item</string>
    <string name="editor_insert_item_successful">Saved item successfully</string>
    <string name="editor_update_item_failed">Item update failed</string>
    <string name="editor_update_item_successful">Updated item successful</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="empty_view_title_text">There are no items to display</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="adapter_item_sale">successfully subtracted 1!</string>
    <string name="button_call_supplier">Call Supplier</string>
    <string name="list_item_product_name">Product Name</string>
    <string name="list_item_dollar_symbol">$</string>
    <string name="list_item_price">price</string>
    <string name="list_item_price_per_unit">/unit</string>
    <string name="list_item_quantity_text_view">Quantity:</string>
    <string name="list_item_quantity">quantity</string>
    <string name="menu_editor_save">Save</string>
    <string name="menu_editor_delete">Delete</string>

</resources>
